# OperonAI

./: .env  ARCHITECTURE_GUIDE.md  README.md  __init__.py  dummy.py  main.py  operon_claude_mcp.py  pyproject.toml  requirements.txt  tmp.py
action/: __init__.py  computer_use_tools.py
actions/: apps.py  dispatcher.py  element_lookup.py  keyboard.py  mouse.py  scroll.py  window_ops.py
agent/: __init__.py  computer_use_agent.py  config.py  loop.py  planner.py
clean/: README.md
clean/actions/: __init__.py  keyboard.py
clean/agent/: __init__.py  config.py  planner.py
clean/core/: __init__.py
clean/perception/: __init__.py  screenshot.py  vision.py
config/: settings.py
core/: models.py  types.py
perception/: __init__.py  desktop_state.py  screenshot.py  state.py  ui_tree.py  vision.py  vision_agent.py  windows.py
utils/: __init__.py  config.py
